qualidoc-k8s/ingress/middleware-https-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: qualidoc
spec:
  redirectScheme:
    scheme: https
    permanent: true
